--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,9 +1,152 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2Aa-EO-zcZ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Board View Controller-->
+        <scene sceneID="BLs-CY-nKa">
+            <objects>
+                <viewController id="2Aa-EO-zcZ" customClass="BoardViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ETW-Ox-rGs"/>
+                        <viewControllerLayoutGuide type="bottom" id="7h3-yF-dP0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cBd-7i-NLG">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sob-1g-O7L">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RJg-qt-wTG">
+                                <rect key="frame" x="6" y="0.0" width="768" height="1024"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Df-0c-nCP">
+                                <rect key="frame" x="20" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Black.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="73D-6b-F3e"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4x-tc-AKc">
+                                <rect key="frame" x="121" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Blue.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="6LE-KY-iPF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQX-Yn-gnr">
+                                <rect key="frame" x="250" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Brown.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="p6p-Rx-sE3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fue-iC-kq7">
+                                <rect key="frame" x="367" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="DarkGreen.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="JCt-qI-YFs"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQ0-4H-FP6">
+                                <rect key="frame" x="479" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="DarkOrange.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="WM1-iK-wiZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l88-bo-YCX">
+                                <rect key="frame" x="593" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="LightBlue.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pencilsPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="D9r-eP-EVM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="6" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iD9-f0-zGb">
+                                <rect key="frame" x="714" y="828" width="34" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Eraser.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="eraserPressed:" destination="2Aa-EO-zcZ" eventType="touchUpInside" id="Zgw-ni-fAc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEu-J7-kTk">
+                                <rect key="frame" x="20" y="20" width="96" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                <state key="normal" title="Save"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4TZ-QZ-98B">
+                                <rect key="frame" x="652" y="20" width="96" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                <state key="normal" title="Reset"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="l88-bo-YCX" secondAttribute="width" id="6K2-rJ-uTE"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="pQ0-4H-FP6" secondAttribute="bottom" id="7TR-jX-KGT"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="l88-bo-YCX" secondAttribute="height" id="9f6-Jk-wKW"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="XQX-Yn-gnr" secondAttribute="width" id="AT9-eH-Ipy"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="pQ0-4H-FP6" secondAttribute="height" id="ISf-cP-Mea"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="iD9-f0-zGb" secondAttribute="width" id="Mr9-My-9QW"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="0Df-0c-nCP" secondAttribute="bottom" id="OBx-0E-CSX"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="0Df-0c-nCP" secondAttribute="width" id="STq-px-F7B"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="p4x-tc-AKc" secondAttribute="height" id="UWJ-lg-JIp"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="XQX-Yn-gnr" secondAttribute="height" id="Xeo-UO-fUd"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="XQX-Yn-gnr" secondAttribute="bottom" id="Zuu-F8-Wji"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="pQ0-4H-FP6" secondAttribute="width" id="aO6-69-Jm6"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="iD9-f0-zGb" secondAttribute="bottom" id="aPA-JJ-ZCV"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="width" secondItem="p4x-tc-AKc" secondAttribute="width" id="euc-O1-nvW"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="0Df-0c-nCP" secondAttribute="height" id="hx4-AJ-ELd"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="height" secondItem="iD9-f0-zGb" secondAttribute="height" id="q5i-v7-M3A"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="p4x-tc-AKc" secondAttribute="bottom" id="yk6-xB-Z4m"/>
+                            <constraint firstItem="Fue-iC-kq7" firstAttribute="bottom" secondItem="l88-bo-YCX" secondAttribute="bottom" id="zTR-VG-yOG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="TopLayerBoardView" destination="Sob-1g-O7L" id="jmd-Ln-lq4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="upW-ZD-5Xm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-258" y="53"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="Black.png" width="53" height="332"/>
+        <image name="Blue.png" width="53" height="332"/>
+        <image name="Brown.png" width="53" height="332"/>
+        <image name="DarkGreen.png" width="53" height="332"/>
+        <image name="DarkOrange.png" width="53" height="332"/>
+        <image name="Eraser.png" width="55" height="167"/>
+        <image name="LightBlue.png" width="53" height="332"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
