--- a/googleLogin/GoogleLogin/GoogleLogin/Base.lproj/Main.storyboard
+++ b/googleLogin/GoogleLogin/GoogleLogin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="aNc-bP-IAv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="GwC-zR-wYb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -25,7 +25,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="76h-SD-rEM" kind="modal" id="fH1-gb-7Uw"/>
+                                    <segue destination="76h-SD-rEM" kind="modal" identifier="one" id="fH1-gb-7Uw"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UkU-2e-slG">
@@ -52,13 +52,31 @@
                                     <action selector="revokeAccess:" destination="aNc-bP-IAv" eventType="touchUpInside" id="nf9-gJ-Xo0"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggA-5Z-jYl">
+                                <rect key="frame" x="284" y="673" width="340" height="84"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="68"/>
+                                <state key="normal" title="Drive View">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="MqQ-Yv-EW6" kind="push" identifier="two" id="NaQ-o3-Ibx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="zwk-sE-xwQ"/>
+                        <barButtonItem title="Item" id="AM0-QD-Zm7"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="fQp-ui-89b"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="row-ay-QVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1037" y="-639"/>
+            <point key="canvasLocation" x="911" y="-639"/>
         </scene>
         <!--WebUI View Controller-->
         <scene sceneID="MPs-Ty-vNk">
@@ -75,7 +93,44 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d9r-QR-NZz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-96" y="-634"/>
+            <point key="canvasLocation" x="1852" y="-634"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="96G-yf-d4S">
+            <objects>
+                <viewController id="MqQ-Yv-EW6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FHr-Fl-CHO"/>
+                        <viewControllerLayoutGuide type="bottom" id="K9X-U2-BHv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8BN-Ni-1Wj">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="TPM-hd-3hf"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EtC-f4-T9q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="878" y="572"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="C7D-uU-lM1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GwC-zR-wYb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aUX-ku-AcI">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aNc-bP-IAv" kind="relationship" relationship="rootViewController" id="Jud-A9-QSp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IKk-VD-3a6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-63" y="-639"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
