--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -147,20 +147,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vFt-yQ-GYz">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vFt-yQ-GYz">
                                 <rect key="frame" x="135" y="163" width="498" height="471"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="classmates" id="kRG-2m-W7c">
-                                        <rect key="frame" x="0.0" y="86" width="498" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kRG-2m-W7c" id="Ncq-5i-0do">
-                                            <rect key="frame" x="0.0" y="0.0" width="498" height="43"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="4hb-Uj-Doz" rowHeight="65" style="IBUITableViewCellStyleDefault" id="u9q-Fd-kou">
+                                        <rect key="frame" x="0.0" y="86" width="498" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="u9q-Fd-kou" id="gR8-8z-fpZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="498" height="64"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4hb-Uj-Doz">
+                                                    <rect key="frame" x="15" y="0.0" width="468" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                             </tableView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ggc-r2-GO1">
                                 <rect key="frame" x="135" y="667" width="498" height="267"/>
@@ -175,7 +185,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="n1o-Ku-u0t" kind="push" id="5Ml-3F-uXA"/>
+                                    <action selector="confirmInvites:" destination="cFw-in-See" eventType="touchUpInside" id="G6k-Tt-kpk"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -185,6 +195,7 @@
                     <connections>
                         <outlet property="classmateList" destination="vFt-yQ-GYz" id="OK0-lO-USv"/>
                         <outlet property="recentGroups" destination="ggc-r2-GO1" id="pkO-Ca-tub"/>
+                        <segue destination="n1o-Ku-u0t" kind="push" identifier="groupsToHandout" id="9xQ-Vr-LXa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q21-Fl-AG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -490,7 +501,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="I09-Fa-8Ju"/>
         <segue reference="CzW-oF-i3a"/>
+        <segue reference="9xQ-Vr-LXa"/>
     </inferredMetricsTieBreakers>
 </document>
